@@ -2,3 +2,4 @@
 - Hanno Schlichting, Contributor
 - gawel, Contributor
 - aburkhalter, Contributor
+- Amos Latteier, Contributor
